erDiagram
    USERS {
        bigint id PK
        string email
        string kyc_status
        string trust_level
    }

    PRODUCTS {
        bigint id PK
        string name
        decimal rent_price_per_day
        int rental_quantity
    }

    DEVICES {
        bigint id PK
        bigint product_id FK
        string serial_number UK
        string status
        text condition_details
    }

    RENTAL_ORDERS {
        bigint id PK
        string code UK
        bigint user_id FK
        datetime start_date
        datetime end_date
        string status
        decimal rental_fee
        decimal estimated_deposit_amount
        decimal final_deposit_amount
        string deposit_status
        string risk_level
        string payment_method
        string payment_status
        string shipping_name
        string shipping_phone
        string shipping_address
    }

    RENTAL_ORDER_ITEMS {
        bigint id PK
        bigint rental_order_id FK
        bigint product_id FK
        bigint device_id FK
        decimal price_per_day
        text condition_before_handover
        text condition_after_return
    }

    RENTAL_CONTRACTS {
        bigint id PK
        bigint rental_order_id FK
        string contract_number UK
        text terms_and_conditions
        string contract_hash
        string document_hash
        datetime signed_at
        bigint signer_user_id
        string signer_ip
        string signer_user_agent
        string status
        string signing_otp_code
    }

    RENTAL_HANDOVER_REPORTS {
        bigint id PK
        bigint rental_order_id FK
        bigint staff_id FK
        string serial_number
        string body_condition
        string lens_condition
        string battery_condition
        string accessory_condition
        decimal final_deposit_amount
        text note
    }

    RENTAL_RETURN_REPORTS {
        bigint id PK
        bigint rental_order_id FK
        bigint staff_id FK
        datetime return_date
        int late_days
        int early_return_days
        decimal early_return_refund_amount
        decimal late_fee
        decimal damage_fee
        decimal missing_accessory_fee
        decimal refund_amount
        decimal extra_payment_amount
    }

    RENTAL_PAYMENTS {
        bigint id PK
        bigint rental_order_id FK
        string payment_type
        decimal amount
        string payment_method
        string transaction_code
        string status
    }

    RENTAL_REFUNDS {
        bigint id PK
        bigint rental_order_id FK
        decimal amount
        string status
        string refund_method
    }

    DEVICE_CONDITION_REPORTS {
        bigint id PK
        bigint device_id FK
        bigint rental_order_id FK
        string type
        text condition_notes
        string inspector_name
    }

    PRODUCTS ||--o{ DEVICES : "has"
    USERS ||--o{ RENTAL_ORDERS : "creates"

    RENTAL_ORDERS ||--o{ RENTAL_ORDER_ITEMS : "contains"
    PRODUCTS ||--o{ RENTAL_ORDER_ITEMS : "rented"
    DEVICES ||--o{ RENTAL_ORDER_ITEMS : "assigned"

    RENTAL_ORDERS ||--|| RENTAL_CONTRACTS : "has"
    RENTAL_ORDERS ||--|| RENTAL_HANDOVER_REPORTS : "has"
    RENTAL_ORDERS ||--|| RENTAL_RETURN_REPORTS : "has"

    USERS ||--o{ RENTAL_HANDOVER_REPORTS : "staff handles"
    USERS ||--o{ RENTAL_RETURN_REPORTS : "staff checks"

    RENTAL_ORDERS ||--o{ RENTAL_PAYMENTS : "payments"
    RENTAL_ORDERS ||--o{ RENTAL_REFUNDS : "refunds"

    DEVICES ||--o{ DEVICE_CONDITION_REPORTS : "tracked"
    RENTAL_ORDERS ||--o{ DEVICE_CONDITION_REPORTS : "records"